@startuml config

title Abstract model of configurations of logging

package logging {
    package sinks {
        !includesub ./logger.puml!log_sink
        !includesub ./logger.puml!xxx_log_sink
        log_sink o-- xxx_log_sink
    }
    !includesub ./logger.puml!log_tag_config
    log_tag_config o-- log_sink
    !includesub ./logger.puml!log_config
    log_config o-- log_tag_config

    package config {
        interface log_sink_factory_base {
            {abstract} + create(sinks: log_sink_factory_table&) : log_sink
        }
        log_sink_factory_base ..> log_sink

        class log_sink_factory_table {
            + append(name: string,\n\tsink_factory: shared_ptr<log_sink_factory_base>)
            + get(name: string) : log_sink
        }
        log_sink_factory_table o-- log_sink_factory_base
        log_sink_factory_table o-- log_sink
        log_sink_factory_base .up.> log_sink_factory_table

        interface log_config_parser_base {
            {abstract} + parse_from_file(filepath: string_view)
            {abstract} + parse_from_text(filepath: string_view)
        }

        package toml {
            class toml_xxx_log_sink_factory {
                + toml_xxx_log_sink_factory(config)
            }
            log_sink_factory_base <|.. toml_xxx_log_sink_factory
            toml_xxx_log_sink_factory ..> xxx_log_sink

            interface toml_log_sink_config_parser_base {
                {abstract} + parse(table: toml::table) : shared_ptr<log_sink_factory_base>
            }
            toml_log_sink_config_parser_base ..> log_sink_factory_base

            class toml_xxx_log_sink_config_parser
            toml_log_sink_config_parser_base <|.. toml_xxx_log_sink_config_parser
            toml_xxx_log_sink_config_parser ..> toml_xxx_log_sink_factory

            class toml_log_config_parser {
                + parse_from_table(table: toml::table)
            }
            log_config_parser_base <|.. toml_log_config_parser
            toml_log_config_parser o-- toml_log_sink_config_parser_base
            toml_log_config_parser ..> log_sink_factory_table
            toml_log_config_parser ..> log_config
        }
    }
}

@enduml
